# readtomyshoe

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  fly.toml
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  Trunk.toml  index.html  manifest.json  service-worker.js  service_worker.js  style.css
frontend/src/: add_view.rs  app_view.rs  caching.rs  fetch_article.rs  library_view.rs  main.rs  main_view.rs  player_view.rs  queue_view.rs  state.rs  util.rs  utils.rs
frontend/src/player_view/: audio_component.rs  media_session.rs  mod.rs
scripts/: build_docker.sh  dev.sh  prod.sh  prodbuild.sh
server/: Cargo.toml  gen_langs.py
server/src/: add_article.rs  error.rs  lang.rs  list_articles.rs  main.rs  tts.rs  util.rs
