[workspace]
members = [
    "common",
    "frontend",
    "server",
]

[patch.crates-io.web-sys]
git = "https://github.com/rustwasm/wasm-bindgen.git"
rev = "e47dda5c8646317c23b41ae1f5496633dd9c3167"

[patch.crates-io.js-sys]
git = "https://github.com/rustwasm/wasm-bindgen.git"
rev = "e47dda5c8646317c23b41ae1f5496633dd9c3167"

[patch.crates-io.wasm-bindgen]
git = "https://github.com/rustwasm/wasm-bindgen.git"
rev = "e47dda5c8646317c23b41ae1f5496633dd9c3167"

[patch.crates-io.wasm-bindgen-futures]
git = "https://github.com/rustwasm/wasm-bindgen.git"
rev = "e47dda5c8646317c23b41ae1f5496633dd9c3167"
