[package]
name = "readtomyshoe-frontend"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
console_error_panic_hook = "0.1"
gloo-net = { version = "0.6", features = ["json"] }
gloo-utils = "0.2"
js-sys = "0.3"
log = "0.4"
ringbuffer = "0.8"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde-wasm-bindgen = "0.6"
tokio = { version = "1", features = ["macros", "sync"] }
tracing = "0.1"
tracing-wasm = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
url = "2"
urlencoding = "2"

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlSelectElement",
    "HtmlAudioElement",
    "Window",
    "Navigator",
    "MediaSession",
    "MediaPositionState",
    "MediaSessionAction",
    "MediaSessionActionDetails",
    "MediaMetadata",
    "MediaImage",
    "ServiceWorkerContainer",
    "RegistrationOptions",
    "IdbFactory",
    "IdbOpenDbRequest",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbTransaction",
    "IdbTransactionMode",
    "ReadableStream",
    "PageTransitionEvent",
    "ReadableStreamDefaultReader",
    "ReadableStreamDefaultController",
]

[dependencies.common]
path = "../common"
