[package]
name = "readtomyshoe-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.5"
axum-extra = { version = "0.3", features = ["spa"] }
base64 = "0.13"
bytes = "1"
clap = { version = "3", features = ["derive"] }
futures = "0.3"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = "1"
serde_json = "1.0.81"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.4"
tower-http = { version = "0.3", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.common]
path = "../common"
