[package]
name = "readtomyshoe-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-process = "1"
axum = "0.5"
axum-extra = { version = "0.3", features = ["spa"] }
base64 = "0.13"
blake2 = "0.10"
bytes = "1"
clap = { version = "3", features = ["derive"] }
futures = "0.3"
id3 = "1"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.4"
tower-http = { version = "0.3", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
zbase32 = "0.1"
chrono = "0.4"

[dependencies.common]
path = "../common"
