[package]
name = "readtomyshoe-server"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-process = "1"
axum = { version = "0.5", features = ["headers"] }
axum-extra = { version = "0.3", features = ["spa"] }
base64 = "0.13"
blake2 = "0.10"
byteorder = "1"
bytes = "1"
chrono = "0.4"
clap = { version = "3", features = ["derive"] }
governor = "0.4"
futures = "0.3"
id3 = "1"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
sanitize-filename = "0.4"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.4"
tower-http = { version = "0.3", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
zbase32 = "0.1"
whatlang = "0.16.1"
symphonia-bundle-mp3 = "0.5"
symphonia-core = "0.5"
format_xml = "0.3.0"
urlencoding = "2.1.2"
tokio-retry = "0.3.0"

[dependencies.common]
path = "../common"
